#017 - fix: configs to deploy